NIM-14016 6.7 RN - Remove breaking change note regarding 'Intent Verification Checks'

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -26,6 +26,7 @@ tags: ["draft"]
 - We have started [collecting usage data](../../IP_Fabric_GUI/usage_data_collection.md).
 
 ### Network Discovery
+
 - Azure -- Added support for discovery of multiple subscriptions within the same tenant. The **Subscription IDs** field for `Azure` in **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API** is now optional, leave it empty to discover all available subscriptions. Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md##role-definitions-for-ip-fabric).
 - Check Point -- Added support for discovery of firewalls connected to Maestro Orchestrator.
 - Cisco
@@ -36,15 +37,16 @@ tags: ["draft"]
 - FS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
 - Silver Peak (HPE Aruba EdgeConnect) -- Added support for new API [9.3 Endpoints](https://developer.arubanetworks.com/aruba-edgeconnect/docs/rest-api-table-for-93).
 
-### Other Minor Changes
+### Other Changes
 
 - MAC addresses starting with `649EF3` are no longer incorrectly detected as IP Phones but as network devices.
 - The parameters that were originally hard-coded in vendor API clients, such as timeouts and number of re-sends, can now be configured in situ with the assistance of IP Fabric Support.
 - The dot character (`.`) can be used in usernames for jumphost settings, SNMP configuration, and system backup.
 - Sometimes Cisco FMC doesn't return an access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
 - Fixed Silverpeak vendor API client that failed during re-authentication when it received no `orchCsrfToken` token.
+- `NULL` values were sometimes treated as the smallest numerical value in filters. This was rectified, and `NULL` values cannot be compared to numerical values anymore (result of comparison will be always `false`).
 
-### 3rd-Party Updates
+### 3rd-party Updates
 
 - [dex -- A federated OpenID Connect provider](https://github.com/dexidp/dex) has been updated to version `2.38.0`.
 
@@ -53,6 +55,7 @@ tags: ["draft"]
 Newly added features which need to be explicitly enabled in service files. If you are interested in trying them out, please contact our Support or Solution Architect team and we will gladly help you with enabling these features.
 
 - FortiGate FortiSwitch
+
   - Basic discovery support was added as PoC and needs to be enabled manually.
     (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`)
 
@@ -64,6 +67,6 @@ Newly added features which need to be explicitly enabled in service files. If yo
 ### Known Issues
 
 - Google Cloud Platform -- Regional routing mode is currently unavailable and will default to global routing mode.
-To learn more about the difference between these modes, please refer to the
-[GCP API Documentation](https://cloud.google.com/compute/docs/reference/rest/v1/networks/get#:~:text=The%20network%2Dwide%20routing%20mode%20to%20use.%20If%20set%20to%20REGIONAL)
-or the [Cloud Router Overview](https://cloud.google.com/network-connectivity/docs/router/concepts/overview#route-advertisement-default).
+  To learn more about the difference between these modes, please refer to the
+  [GCP API Documentation](https://cloud.google.com/compute/docs/reference/rest/v1/networks/get#:~:text=The%20network%2Dwide%20routing%20mode%20to%20use.%20If%20set%20to%20REGIONAL)
+  or the [Cloud Router Overview](https://cloud.google.com/network-connectivity/docs/router/concepts/overview#route-advertisement-default).
