NIM-13097 6.8 RN - Mention improved discovery error detection and reporting

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -12,8 +12,9 @@ tags: ["draft"]
 
 ## v6.8.0 (UNRELEASED)
 
-### Other Minor Changes
+### Other Changes
 
+- Discovery error detection and reporting have been improved.
 - `Device Change` dashboard widget -- The `Number of Changes` axis' scale has
   been changed from linear to logarithmic. This adjustment should improve
   visualization overall and prevent confusion with scale in certain cases.
