MQ-2789 Add checksums for the release

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -10,7 +10,16 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
-## v6.7.0 (UNRELEASED)
+## v6.7.6 (UNRELEASED)
+
+```
+SHA256 (ipfabric-update-6-7-6+0.tar.gz.sig) = ceb5fb1bba8762b837de208612db7c7c13caab033763132dbeab05fb26ffd9d6
+MD5 (ipfabric-update-6-7-6+0.tar.gz.sig) = 66946007d37d66168587bd5ca64efb85
+SHA256 (ipfabric-6-7-6+0.qcow2) = 1c4e94b93a487f85ed57c963a984b3c482ce962cca7160af98ae2a9bdb9b505f
+MD5 (ipfabric-6-7-6+0.qcow2) = 759fc7390251d009f6b1eafe21abe764
+SHA256 (ipfabric-6-7-6+0.ova) = 3e7a3afda5e90b2daa50813f87bb79e970ce9a9a67410021c193165a76e275b1
+MD5 (ipfabric-6-7-6+0.ova) = 18c7aa1c8492f00162e06100c157216c
+```
 
 ### Replacement of `nimpee startprod` and `nimpee stopprod` Commands
 
