--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -1,16 +1,36 @@
 ---
 description: In this section, you can find the release notes for v6.7 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.7
 
-!!! danger "Unreleased version"
+--8<-- "snippets/upgrade_version_policy.md"
 
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
+--8<-- "snippets/clear_browser_cache.md"
 
-## v6.7.6 (UNRELEASED)
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with
+  other snapshots and their lock will be preserved. Therefore, such snapshots
+  won't be deleted by snapshot retention.
+- Upgrade to `6.7` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor
+  API version for SSO configuration, and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` string in
+  this file with `v6` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+  ```
+
+  For more information, please refer to the
+  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  If you would like assistance, please contact your Solution Architect.
+
+## v6.7.6 (March 18th, 2024; GA)
 
 ```
 SHA256 (ipfabric-update-6-7-6+0.tar.gz.sig) = ceb5fb1bba8762b837de208612db7c7c13caab033763132dbeab05fb26ffd9d6
@@ -20,6 +40,7 @@ MD5 (ipfabric-6-7-6+0.qcow2) = 759fc7390251d009f6b1eafe21abe764
 SHA256 (ipfabric-6-7-6+0.ova) = 3e7a3afda5e90b2daa50813f87bb79e970ce9a9a67410021c193165a76e275b1
 MD5 (ipfabric-6-7-6+0.ova) = 18c7aa1c8492f00162e06100c157216c
 ```
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.7.0](../release_notes_low-level/6.x/6.7.x/6.7.0.md) and following minor releases.
 
 ### Replacement of `nimpee startprod` and `nimpee stopprod` Commands
 
