--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -10,6 +10,10 @@ description: In this section, you can find the release notes for v6.7 releases.
 
 ### Upgrade Notices
 
+- Online upgrade from `6.6.3` does not work and will fail with `Validation
+  failed - Field pathName: "pathName" is required`. Please use the update file
+  `ipfabric-update-6-7-6+0.tar.gz.sig` from
+  <https://releases.ipfabric.io/updates/> instead.
 - During the update process, locked snapshots will be unloaded together with
   other snapshots and their lock will be preserved. Therefore, such snapshots
   won't be deleted by snapshot retention.
