NIM-13998 6.8 RN - Mention storing stale ARP records for Silver Peak

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -12,6 +12,11 @@ tags: ["draft"]
 
 ## v6.8.0 (UNRELEASED)
 
+### Network Discovery
+
+- Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
+  very short expiration time (TTL).
+
 ### Other Changes
 
 - Discovery error detection and reporting have been improved.
