NIM-14124 Update note about online upgrade issue (with `6.7.7` released)

--- a/snippets/6.6.3_online_upgrade_issue.md
+++ b/snippets/6.6.3_online_upgrade_issue.md
@@ -2,7 +2,7 @@
 
     Due to an issue identified within the System Administration UI, upgrading
     IP Fabric from version `6.6.3` (or `6.7.6`) over the internet will fail with
-    `Validation failed - Field pathName: "pathName" is required`. The issue will
-    be addressed in the upcoming `6.7.7` release. If you are running any IP
+    `Validation failed - Field pathName: "pathName" is required`. The issue has
+    been addressed in version `6.7.7` (or newer). If you are running any IP
     Fabric versions from `6.6.3` to `6.7.6`, please upgrade to `6.7.7` or newer
     manually with an update file from <https://releases.ipfabric.io/updates/>.
