NIM-13841 Document hybrid discovery added for Versa and Viptela in `6.8`

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -16,6 +16,12 @@ tags: ["draft"]
 
 - Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
   very short expiration time (TTL).
+- Versa -- Previously, Versa devices were discovered only via the API. Now you
+  can enable hybrid discovery (combining API calls and CLI commands). See
+  [Cisco Viptela SD-WAN](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md##cisco-viptela-sd-wan).
+- Viptela -- Previously, Viptela devices were discovered only via the API. Now
+  you can enable hybrid discovery (combining API calls and CLI commands). See
+  [Versa Networks SD-WAN](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
 
 ### Other Changes
 
