ST-298 Document changed behavior of `Loading Graph cache` task in `6.7`

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -77,6 +77,8 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Sometimes Cisco FMC doesn't return an access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
 - Fixed Silverpeak vendor API client that failed during re-authentication when it received no `orchCsrfToken` token.
 - `NULL` values were sometimes treated as the smallest numerical value in filters. This was rectified, and `NULL` values cannot be compared to numerical values anymore (result of comparison will be always `false`).
+- Changed behavior of `Loading Graph cache` Assurance Engine task
+  - With this task disabled (to skip topology calculation at the end of discovery and make discovery faster), the Network Viewer (Site Diagrams) and Path Lookup (End to end path, Host to Gateway path) are now still able to load diagrams; they will be just slower as the topology is not cached and needs to be calculated on demand.
 
 ### 3rd-party Updates
 
