--- a/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.3.md
+++ b/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.3.md
@@ -4,12 +4,13 @@ description: IP Fabric automatically generated low-level release notes for versi
 
 # LLRN 6.6.3
 
-These are low-level release notes for IP Fabric release `6.6.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 4 issues.
+These are low-level release notes for IP Fabric release `6.6.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 5 issues.
 
 ## Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
+- `NIM-13229` -- Medium -- NSX-T Investigate missing routing edges between T1 and T0 router
 - `NIM-13442` -- Medium -- Rabbit failing on `RangeError: Invalid string length` APIC tasker discovery
 - `NIM-13466` -- Medium -- Bugfix: commands/fs/_fsos/aggregatorGroupSummary
 - `NIM-13521` -- Medium -- HP switch prompt detection
