NIM-7866 6.8 RN - Mention added PBR support for ArubaCX

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -22,6 +22,7 @@ tags: ["draft"]
 - Viptela -- Previously, Viptela devices were discovered only via the API. Now
   you can enable hybrid discovery (combining API calls and CLI commands). See
   [Versa Networks SD-WAN](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
+- HPE Citrix Aruba CX -- Support for Policy-Based Routing was added.
 
 ### Other Changes
 
@@ -29,4 +30,3 @@ tags: ["draft"]
 - `Device Change` dashboard widget -- The `Number of Changes` axis' scale has
   been changed from linear to logarithmic. This adjustment should improve
   visualization overall and prevent confusion with scale in certain cases.
-
