ST-300, DOS-1156 `6.7` RN - Add known issue with Vendors API; mention NTP step being removed from `nimpee-net-config` - backport to `release/6.7` branch

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -79,6 +79,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - `NULL` values were sometimes treated as the smallest numerical value in filters. This was rectified, and `NULL` values cannot be compared to numerical values anymore (result of comparison will be always `false`).
 - Changed behavior of `Loading Graph cache` Assurance Engine task
   - With this task disabled (to skip topology calculation at the end of discovery and make discovery faster), the Network Viewer (Site Diagrams) and Path Lookup (End to end path, Host to Gateway path) are now still able to load diagrams; they will be just slower as the topology is not cached and needs to be calculated on demand.
+- The NTP configuration step has been removed from the First Boot Wizard (`nimpee-net-config`).
 
 ### 3rd-party Updates
 
@@ -104,3 +105,9 @@ Newly added features which need to be explicitly enabled in service files. If yo
   To learn more about the difference between these modes, please refer to the
   [GCP API Documentation](https://cloud.google.com/compute/docs/reference/rest/v1/networks/get#:~:text=The%20network%2Dwide%20routing%20mode%20to%20use.%20If%20set%20to%20REGIONAL)
   or the [Cloud Router Overview](https://cloud.google.com/network-connectivity/docs/router/concepts/overview#route-advertisement-default).
+- `Invalid Input` after editing instances of some Vendor APIs
+   - In **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API**, after editing an existing instance of some Vendor APIs, clicking **Update** and **Save**, the error message `Invalid Input` is shown:<br/>
+     ![Invalid Input error in Vendors API](6.7_invalid_input_in_vendors_api.png)
+   - This affects `Cisco APIC`, `Ruckus Virtual SmartZone`, `Silver Peak`, `Versa`, `Viptela`, and `VMware NSX-T`.
+   - The issue will be addressed in version `6.8`.
+   - As a workaround, if you need to edit an instance of any of the mentioned Vendor APIs, please remove and re-create it.
