NIM-13840 6.8 RN - Add RN for combined discovery

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -14,14 +14,11 @@ tags: ["draft"]
 
 ### Network Discovery
 
+- Combined API + CLI discovery support for SD-WAN vendors [Versa](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md) and [Viptela](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
+  - If combined discovery is enabled, routing tables are downloaded via CLI to avoid big data transfers over the controller. The discovery time should be improved.
+  - After finishing all API calls, IP Fabric tries to connect to one of the device IPs (the default limit is 10 IPs, now configurable with IP Fabric Support). Credentials from the global discovery settings are used. If the device is not reachable, the routing table won't be downloaded.
 - Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
   very short expiration time (TTL).
-- Versa -- Previously, Versa devices were discovered only via the API. Now you
-  can enable hybrid discovery (combining API calls and CLI commands). See
-  [Cisco Viptela SD-WAN](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md##cisco-viptela-sd-wan).
-- Viptela -- Previously, Viptela devices were discovered only via the API. Now
-  you can enable hybrid discovery (combining API calls and CLI commands). See
-  [Versa Networks SD-WAN](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
 - HPE Citrix Aruba CX -- Support for Policy-Based Routing was added.
 
 ### Other Changes
