NIM-13527 6.8 RN - Add FortiSwitch changes

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -20,6 +20,9 @@ tags: ["draft"]
 - Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
   very short expiration time (TTL).
 - HPE Citrix Aruba CX -- Support for Policy-Based Routing was added.
+- Fortinet FortiSwitch
+  - It is not necessary to enable it manually (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`) anymore.
+  - Support for MCLAG and transceivers was added.
 
 ### Other Changes
 
