NIM-9388 6.8 RN - Update attributes from global

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -30,3 +30,6 @@ tags: ["draft"]
 - `Device Change` dashboard widget -- The `Number of Changes` axis' scale has
   been changed from linear to logarithmic. This adjustment should improve
   visualization overall and prevent confusion with scale in certain cases.
+- You can now update device attributes on an existing snapshot from global settings in
+  **Discovery Snapshot --> Settings --> Device Attributes**. This action fully replaces
+  all attributes on the snapshot.
