NIM-8070 Cisco - Add support for interface bandwidth

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -23,6 +23,7 @@ tags: ["draft"]
 - Fortinet FortiSwitch
   - It is not necessary to enable it manually (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`) anymore.
   - Support for MCLAG and transceivers was added.
+- Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on interfaces was added.
 
 ### Other Changes
 
