NIM-14275 azure known issue in 6.7

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -42,6 +42,7 @@ MD5 (ipfabric-6-7-7+0.qcow2) = 28a08133ad0ce80b599161fbd18db4de
 SHA256 (ipfabric-6-7-7+0.ova) = e90e80628ff1c57916b3951dc7abf99fdb4f70822425a1c60e8c16ad19d72d4c
 MD5 (ipfabric-6-7-7+0.ova) = 6a1c06f404c8a174e045e14104ef727a
 ```
+
 For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.7.0](../release_notes_low-level/6.x/6.7.x/6.7.0.md) and following minor releases.
 
 ### Replacement of `nimpee startprod` and `nimpee stopprod` Commands
@@ -59,7 +60,16 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Network Discovery
 
-- Azure -- Added support for discovery of multiple subscriptions within the same tenant. The **Subscription IDs** field for `Azure` in **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API** is now optional, leave it empty to discover all available subscriptions. Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md##role-definitions-for-ip-fabric).
+- Azure -- This release adds support for discovery of multiple subscriptions within the same tenant. The **Subscription IDs** field for `Azure` in **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API** is now optional, leave it empty to discover all available subscriptions.
+
+  Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md#role-definitions-for-ip-fabric).
+
+  !!! bug "Multiple subscriptions"
+
+      Unfortunatelly, ther initial implementation contains a bug, which can cause missing data, when multiple subscriptions are used. The solution is to keep the settings the same as it was previously. Fix will be part of `6.8`.
+
+      ![Azure subscriptions](6.7/azure-6.7-no-multiple-subscriptions.png)
+
 - Check Point -- Added support for discovery of firewalls connected to Maestro Orchestrator.
 - Cisco
   - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
@@ -106,8 +116,8 @@ Newly added features which need to be explicitly enabled in service files. If yo
   [GCP API Documentation](https://cloud.google.com/compute/docs/reference/rest/v1/networks/get#:~:text=The%20network%2Dwide%20routing%20mode%20to%20use.%20If%20set%20to%20REGIONAL)
   or the [Cloud Router Overview](https://cloud.google.com/network-connectivity/docs/router/concepts/overview#route-advertisement-default).
 - `Invalid Input` after editing instances of some Vendor APIs
-   - In **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API**, after editing an existing instance of some Vendor APIs, clicking **Update** and **Save**, the error message `Invalid Input` is shown:<br/>
-     ![Invalid Input error in Vendors API](6.7_invalid_input_in_vendors_api.png)
-   - This affects `Cisco APIC`, `Ruckus Virtual SmartZone`, `Silver Peak`, `Versa`, `Viptela`, and `VMware NSX-T`.
-   - The issue will be addressed in version `6.8`.
-   - As a workaround, if you need to edit an instance of any of the mentioned Vendor APIs, please remove and re-create it.
+  - In **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API**, after editing an existing instance of some Vendor APIs, clicking **Update** and **Save**, the error message `Invalid Input` is shown:<br/>
+    ![Invalid Input error in Vendors API](6.7_invalid_input_in_vendors_api.png)
+  - This affects `Cisco APIC`, `Ruckus Virtual SmartZone`, `Silver Peak`, `Versa`, `Viptela`, and `VMware NSX-T`.
+  - The issue will be addressed in version `6.8`.
+  - As a workaround, if you need to edit an instance of any of the mentioned Vendor APIs, please remove and re-create it.
