NIM-14408 6.8 RN - Add backend product release notes

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -35,3 +35,5 @@ tags: ["draft"]
 - You can now update device attributes on an existing snapshot from global settings in
   **Discovery Snapshot --> Settings --> Device Attributes**. This action fully replaces
   all attributes on the snapshot.
+- You can filter [Disabled Discovery Tasks](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md) by device's Serial Number. This should help with targeting specific devices.
+- In Table Description, there's a link to a separate page with the API documentation. Additionally, we've ensured that the information in our API documentation accurately reflects the behavior of our endpoints.
