NIM-14275 Slightly polish notes about Azure known issue in 6.7 - backport to `release/6.7`

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -64,9 +64,9 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
   Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md#role-definitions-for-ip-fabric).
 
-  !!! bug "Multiple subscriptions"
+  !!! bug "Multiple Subscriptions"
 
-      Unfortunatelly, ther initial implementation contains a bug, which can cause missing data, when multiple subscriptions are used. The solution is to keep the settings the same as it was previously. Fix will be part of `6.8`.
+      Unfortunately, the initial implementation contains a bug, which can cause missing data when multiple subscriptions are used. The workaround is to keep the settings the same as they were previously. The bug will be addressed in `6.8`.
 
       ![Azure subscriptions](6.7/azure-6.7-no-multiple-subscriptions.png)
 
