--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -17,7 +17,7 @@ tags: ["draft"]
 - Combined API + CLI discovery support for SD-WAN vendors [Versa](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md) and [Viptela](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
   - If combined discovery is enabled, routing tables are downloaded via CLI to avoid big data transfers over the controller. The discovery time should be improved.
   - After finishing all API calls, IP Fabric tries to connect to one of the device IPs (the default limit is 10 IPs, now configurable with IP Fabric Support). Credentials from the global discovery settings are used. If the device is not reachable, the routing table won't be downloaded.
-- Azure -- issue with multiple subcriptions has been fixed. Multiple subcritions can be now specified and will be correctly discovered.
+- Azure -- The issue with multiple subcriptions has been fixed. Multiple subscriptions can now be specified and will be correctly discovered.
 - Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
   very short expiration time (TTL).
 - HPE Citrix Aruba CX -- Support for Policy-Based Routing was added.
