NIM-13468 6.8 RN - Document new CIDR operators

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -26,6 +26,19 @@ tags: ["draft"]
   - Support for MCLAG and transceivers was added.
 - Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on interfaces was added.
 
+### New CIDR Operators for IPv4 Routing Table's `Route` Column
+
+- Operators:
+  - is strict supernet (API: `gt`, UI: `>`)
+  - is supernet (API: `gte`, UI: `>=`)
+  - is strict subnet (API: `lt`, UI: `<`)
+  - is subnet (API: `lte`, UI: `<=`)
+  - overlaps (API: `sect`, UI: `@`)
+  - does not overlap (API: `nsect`, UI: `!@`)
+- All new operators take IPv4 CIDR as a value.
+- The operators are available for the IPv4 routing table's `Route` column (e.g., in **Technology --> Routing --> Routes --> IPv4 Routes**).
+- The operators can be used for table data filtering and in intent verification rule definitions.
+
 ### Other Changes
 
 - Discovery error detection and reporting have been improved.
