NIM-13468 6.8 RN - Amend note about new CIDR operators

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -26,7 +26,7 @@ tags: ["draft"]
   - Support for MCLAG and transceivers was added.
 - Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on interfaces was added.
 
-### New CIDR Operators for IPv4 Routing Table's `Route` Column
+### New CIDR Operators for Table Routing Columns
 
 - Operators:
   - is strict supernet (API: `gt`, UI: `>`)
@@ -36,7 +36,7 @@ tags: ["draft"]
   - overlaps (API: `sect`, UI: `@`)
   - does not overlap (API: `nsect`, UI: `!@`)
 - All new operators take IPv4 CIDR as a value.
-- The operators are available for the IPv4 routing table's `Route` column (e.g., in **Technology --> Routing --> Routes --> IPv4 Routes**).
+- The operators are available for IPv4 routing table columns (e.g., in **Technology --> Routing --> Routes**).
 - The operators can be used for table data filtering and in intent verification rule definitions.
 
 ### Other Changes
