NIM-13097 6.8 RN - Extend note regarding improved discovery error detection and reporting

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -42,6 +42,10 @@ tags: ["draft"]
 ### Other Changes
 
 - Discovery error detection and reporting have been improved.
+  - In a snapshot's **Summary of Issues**, any Vendor API discovery failure
+    is now being reported (for example, due to missing/wrong
+    credentials):<br/>
+    ![Failed Vendor APIs](6.8_failed_vendor_apis.png)
 - `Device Change` dashboard widget -- The `Number of Changes` axis' scale has
   been changed from linear to logarithmic. This adjustment should improve
   visualization overall and prevent confusion with scale in certain cases.
