MQ-3282 Update of hashes and LLRN for 6.8.4

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -10,7 +10,17 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
-## v6.8.0 (UNRELEASED)
+## v6.8.4 (May 14th, 2024; GA)
+```
+SHA256 (ipfabric-update-6-8-4+0.tar.gz.sig) = 2660ef87f9cf512650dd67bb454feb0953bdd03e7db22f4234f1634043cac07e
+MD5 (ipfabric-update-6-8-4+0.tar.gz.sig) = bcc3f6b55e5467835c7954362b6e35c5
+SHA256 (ipfabric-6-8-4+0.ova) = 20146eceb07d63499d6c3a6b4803db657853ad3272f67976ae28130c48b7dc27
+MD5 (ipfabric-6-8-4+0.ova) = 57586d9fefafdb06ac3dc4f333f60517
+SHA256 (ipfabric-6-8-4+0.qcow2) = 9b55944acc2c6a30fbd435a125d0fcf8e70ea5047d0f9d11ef88961d9eb0b98a
+MD5 (ipfabric-6-8-4+0.qcow2) = c3001363d8eb7e1695d63658442a6340
+SHA256 (ipfabric-6-8-4+0.vmdk) = f8385667921641bbb63e312ee26a12fc4f6a8ba51918cfca6184a3edda50068f
+MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
+```
 
 ### Network Discovery
 
