--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -1,16 +1,39 @@
 ---
 description: In this section, you can find the release notes for v6.8 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.8
 
-!!! danger "Unreleased version"
+--8<-- "snippets/6.6.3_online_upgrade_issue.md"
 
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
+--8<-- "snippets/upgrade_version_policy.md"
+
+--8<-- "snippets/clear_browser_cache.md"
+
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with
+  other snapshots and their lock will be preserved. Therefore, such snapshots
+  won't be deleted by snapshot retention.
+- Upgrade to `6.8` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor
+  API version for SSO configuration, and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` string in
+  this file with `v6` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+  ```
+
+  For more information, please refer to the
+  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  If you would like assistance, please contact your Solution Architect.
 
 ## v6.8.4 (May 14th, 2024; GA)
+
 ```
 SHA256 (ipfabric-update-6-8-4+0.tar.gz.sig) = 2660ef87f9cf512650dd67bb454feb0953bdd03e7db22f4234f1634043cac07e
 MD5 (ipfabric-update-6-8-4+0.tar.gz.sig) = bcc3f6b55e5467835c7954362b6e35c5
