--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -15,3 +15,4 @@ tags: ["draft"]
 ### Network Discovery
 
 - Versa -- LLDP support was added.
+- Stormshield (SN) -- Support for filter (firewall) rules was added.
