NIM-14645 6.9 RN - Document added NTP support for Brocade FastIron

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -16,3 +16,4 @@ tags: ["draft"]
 
 - Versa -- LLDP support was added.
 - Stormshield (SN) -- Support for filter (firewall) rules was added.
+- Brocade (FastIron) -- NTP support was added.
