NIM-14731 6.8 RN - Document bugfix for sensitive Vendor API data being logged

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -32,6 +32,14 @@ description: In this section, you can find the release notes for v6.8 releases.
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
+## v6.8.6 (UNRELEASED)
+
+### Security Fixes
+
+- Fixed the issue with Vendor API clients logging sensitive data when the
+  sensitive data contained a regex special character (e.g., `\t`, `\b`, `\d`, 
+  `\w`, etc.).
+
 ## v6.8.4 (May 14th, 2024; GA)
 
 ```
