NIM-14221 6.9 RN - Document increased max auth retry for CLI

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -17,3 +17,10 @@ tags: ["draft"]
 - Versa -- LLDP support was added.
 - Stormshield (SN) -- Support for filter (firewall) rules was added.
 - Brocade (FastIron) -- NTP support was added.
+
+### Other Changes
+
+- The **Authentication failure** field (how many times to retry a connection
+  when it fails on authentication) in **Settings --> Discovery & Snapshots -->
+  Discovery Settings --> Advanced CLI** now has an increased maximum value. It
+  can be set up to 5 retries. 
