NIM-14766 Document added SD-WAN support for Fortinet FortiGate

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -17,6 +17,8 @@ tags: ["draft"]
 - Versa -- LLDP support was added.
 - Stormshield (SN) -- Support for filter (firewall) rules was added.
 - Brocade (FastIron) -- NTP support was added.
+- Fortinet FortiGate -- SD-WAN support was added. For more details, see
+  [Fortinet SD-WAN Known Issues](../../support/known_issues/Vendors/fortinet/sdwan.md).
 
 ### Other Changes
 
