MQ-3397 LLRN and hashes update for 6.8.6 GA

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -32,7 +32,18 @@ description: In this section, you can find the release notes for v6.8 releases.
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
-## v6.8.6 (UNRELEASED)
+## v6.8.6 (May 28th, 2024; GA)
+
+```
+SHA256 (ipfabric-update-6-8-6+0.tar.gz.sig) = e9d095fa25bbdd9321d806a8982adbadb3bb3009fb29d8ddf501f9162ed95a60
+MD5 (ipfabric-update-6-8-6+0.tar.gz.sig) = ce79f852b9b41faf7c676537bfdad35c
+SHA256 (ipfabric-6-8-6+0.ova) = abe9a02b68ccc861739d7e6b9b5eeeb76c2d4181eed849bbb7a8d92c5273c31e
+MD5 (ipfabric-6-8-6+0.ova) = d08f95db651a5ac360f6746501839ccf
+SHA256 (ipfabric-6-8-6+0.qcow2) = a0a5615ccb3b2d34c6a5a1bf744efb5cd6752464a2daa43f868624896c4d8034
+MD5 (ipfabric-6-8-6+0.qcow2) = 3b545ae437f021e9b38d67b9546687ef
+SHA256 (ipfabric-6-8-6+0.vmdk) = e85bcb69148b9e3b487311a365fe5eeedc122b60f5ebbc11361f9a3532502a32
+MD5 (ipfabric-6-8-6+0.vmdk) = cfd14bc55cd02259a6be3d4178c470d4
+```
 
 ### Security Fixes
 
