ST-318 Remove IP addresses of `{callhome,releases}.ipfabric.io`

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -106,3 +106,12 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
   all attributes on the snapshot.
 - You can filter [Disabled Discovery Tasks](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md) by device's Serial Number. This should help with targeting specific devices.
 - In Table Description, there's a link to a separate page with the API documentation. Additionally, we've ensured that the information in our API documentation accurately reflects the behavior of our endpoints.
+- `callhome.ipfabric.io` has changed its IP address from `95.217.156.217` to
+  `65.109.166.252`.
+  - It is needed for
+    [upgrading IP Fabric over the internet](../../System_Administration/System_Administration_UI/system_update.md#online-update)
+    (along with `releases.ipfabric.io`) and
+    [sending diagnostics (parsing errors)](../../support/index.md#callhome) to us.
+  - If you want to use the mentioned functionalities, please allowlist the FQDN
+    `callhome.ipfabric.io` instead of the IP address `65.109.166.252`, as the IP
+    address is subject to change.
