NIM-14469 documentation note

--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -77,6 +77,7 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
   - It is not necessary to enable it manually (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`) anymore.
   - Support for MCLAG and transceivers was added.
 - Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on interfaces was added.
+- Improved overloaded sever detection for http/https based vendor APIs.
 
 ### New CIDR Operators for Table Routing Columns
 
