--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -19,6 +19,7 @@ tags: ["draft"]
 - Brocade (FastIron) -- NTP support was added.
 - Fortinet FortiGate -- SD-WAN support was added. For more details, see
   [Fortinet SD-WAN Known Issues](../../support/known_issues/Vendors/fortinet/sdwan.md).
+- Overloaded server detection for HTTP/HTTPS-based Vendor APIs was improved.
 
 ### Other Changes
 
