NIM-14880 Document tokens being removed from response body in `6.9`

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -12,6 +12,14 @@ tags: ["draft"]
 
 ## v6.9.0 (UNRELEASED)
 
+### Authentication
+
+`accessToken` and `refreshToken` have been removed from the response body of all
+endpoints (`/auth/login`, `/auth/token`, and `/auth/token/swap`) as a security
+fix, enhancing protection against XSS attacks. If you use this authentication
+method in your scripts, please update them to use the `Set-Cookie` headers. For
+more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
+
 ### Network Discovery
 
 - Versa -- LLDP support was added.
