ST-305 Move `boot_wizard` to `First_Boot_Wizard`; unify to 'First Boot Wizard'

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -238,8 +238,8 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
 - All TLS versions older than `1.3` have been deprecated.
   - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
   - To re-enable an older version please see [Custom TLS Settings](../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
-- Boot Wizard Changes
-  - For VM initial deployments where console access is not possible, it's now possible to run the boot wizard via SSH
+- First Boot Wizard Changes
+  - For VM initial deployments where console access is not possible, it's now possible to run the First Boot Wizard via SSH
     - Boot the VM, determine the IP address assigned to it from DHCP, and SSH to the VM: `ssh osadmin@<dhcp-learned-ip-address>`
     - Once logged in, run `nimpee-net-config -a`
 - [cloud-init](https://cloud-init.io/) preliminary support
