--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -92,9 +92,9 @@ You can now specify the level of access a user has by restricting the ability to
   - Save Historical Data
   - Compute Intent Verification Rules
 
-### Changes to IP Fabric Appliance Config Wizard
+### Changes to IP Fabric First Boot Wizard
 
-- Starting in 6.0, when setting the hostname in the config wizard, the hostname will follow [RFC1035 Section 2.3.1](https://www.rfc-editor.org/rfc/rfc1035#section-2.3.1) standards.
+- Starting in 6.0, when setting the hostname in the First Boot Wizard, the hostname will follow [RFC1035 Section 2.3.1](https://www.rfc-editor.org/rfc/rfc1035#section-2.3.1) standards.
 
   ```bnf
   <domain> ::= <subdomain> | " "
