--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -787,7 +787,7 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
 ### Image
 
 - Added tcpdump package
-- Installation system wizard - Self-signed certificate with one letter
+- First Boot Wizard - Self-signed certificate with one letter
   country prevented to start all web services. Fixed with the
   requirement for two-letter country
 
@@ -3087,8 +3087,7 @@ interface fex-fabric`
 - Discovery - Refresh data for specific devices - override device
   output in snapshot
 - Discovery - Fixed - Cannot be started when proxy is configured.
-- Initial network configuration wizard - Fixed - NTP configuration
-  hangs.
+- First Boot Wizard - Fixed - NTP configuration hangs.
 
 ### 3.0.2 (19th February 2019)
 
